Added time and date stuff, added comment headers to CSS, added tags

--- a/css/common.css
+++ b/css/common.css
@@ -4,6 +4,10 @@ section {
   left:70px;
 }
 
+/*===================================================*/
+/* Navigation */
+/*===================================================*/
+
 nav {
   z-index:99;
   width:70px;
@@ -19,6 +23,10 @@ nav img {
   padding:15px;
   height:auto;
 }
+
+/*===================================================*/
+/* Timeline stuff */
+/*===================================================*/
 
 #timeline {
   min-height:200px;
@@ -45,9 +53,9 @@ nav img {
 
 #time_label {
   position:absolute;
-  width:100%;
+  width:50%;
   top:25px;
-  left:0;
+  left:25%;
 }
 
 .time_indicator {
@@ -60,16 +68,16 @@ nav img {
   top:65px;
 }
 
-
 #current_time_indicator {
   background: #F76262;
   left:50%;
 }
 
 
-
-
+/*===================================================*/
 /* Headers */
+/*===================================================*/
+
 h1 { font-size: 4.0em; }
 h2 { font-size: 3.4em; }
 h3 { font-size: 2.8em; }
@@ -77,7 +85,10 @@ h4 { font-size: 2.2em; }
 h5 { font-size: 1.6em; }
 h6 { font-size: 1.2em; }
 
+/*===================================================*/
 /* General */
+/*===================================================*/
+
 p, span, a, input, textarea, button   { font-size: 1em; }
 .font-small  { font-size: 0.8em; }
 .clear       { clear: both; }
@@ -88,14 +99,20 @@ a            { color: #40b0ee; }
 a:hover      { color: #99d4f5; cursor:pointer; }
 a:active     { opacity: 0.3; }
 
+/*===================================================*/
 /* Colours */
+/*===================================================*/
+
 .white     { color:#ffffff; }
 .black     { color: #404040; }
 .bg-grey   { background: #ebebeb; }
 .bg-black  { background: #404040; }
 .bg-blue   { background: #40b0ee; }
 
-/* Stylings */
+/*===================================================*/
+/* Common Stylings */
+/*===================================================*/
+
 .rounded   { border-radius: 0.1em; }
 .padded    { padding: 1% 2%; }
 .shadow {
@@ -104,7 +121,10 @@ a:active     { opacity: 0.3; }
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.16);
 }
 
+/*===================================================*/
 /* Figures & Captions */
+/*===================================================*/
+
 figure {
   width: 80%;
   margin:3% 10%;
@@ -120,7 +140,11 @@ figcaption {
   border-radius: 0px 0px 5px 5px;
 }
 
+
+/*===================================================*/
 /* Flashes */
+/*===================================================*/
+
 .flash {
   padding:10px;
   text-align:center;
@@ -152,8 +176,10 @@ figcaption {
   background: #D9EFFC;
 }
 
-
+/*===================================================*/
 /* Form Elements */
+/*===================================================*/
+
 form { padding: 5% 0; }
 
 input:focus, textarea:focus {
@@ -208,4 +234,21 @@ input[type="submit"]:hover, button:hover {
 input[type="submit"]:active, button:active {
   transition: opacity 0.1s;
   opacity: 0.3;
+}
+
+/*===================================================*/
+/* Tags */
+/*===================================================*/
+
+.tag {
+
+}
+
+.tags {
+  background:
+  padding:10px;
+}
+
+.tag-active {
+
 }
