--- a/css/common.css
+++ b/css/common.css
@@ -275,7 +275,7 @@ input[type="submit"]:active, button:active {
 
 
 /*===================================================*/
-/* Tags */
+/* Activities */
 /*===================================================*/
 
 .activities {
@@ -385,6 +385,23 @@ input[type="submit"]:active, button:active {
   margin-bottom:5px;
 }
 
+.activity-tags {
+  font-size:0.8em;
+  padding:10px 0 0 0;
+  font-style: italic;
+}
+
+.tag-small {
+  padding:3px;
+  color: #ec7c7c;
+}
+
+
+.tag-small:hover {
+  cursor: auto;
+  color: #ec7c7c;
+}
+
 #new_activity_form {
   position:absolute;
   top:0;
@@ -414,4 +431,8 @@ input[type="submit"]:active, button:active {
   min-height: 1000px;
   width:100%;
   height:100%;
+}
+
+.field-error {
+  border-color:#d45656;
 }
